--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+
 	<build>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
@@ -46,17 +48,6 @@
 					</webResources>
 				</configuration>
 			</plugin>
-
-			<!-- execute unit tests -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.21.0</version>
-
-				<configuration>
-					<useSystemClassLoader>false</useSystemClassLoader>
-				</configuration>
-			</plugin>
 			
 		    <plugin>
                <groupId>org.apache.maven.plugins</groupId>
@@ -70,7 +61,13 @@
                    </execution>
                </executions>
            </plugin>
-           
+          
+	      <plugin>
+	        <groupId>com.heroku.sdk</groupId>
+	        <artifactId>heroku-maven-plugin</artifactId>
+	        <version>2.0.6</version>
+	      </plugin>
+	  
 		</plugins>
 	</build>
 
@@ -82,14 +79,22 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<version>6.1.0.jre7</version>
 		</dependency>
+		-->
+		
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.0.Final</version>
 		</dependency>
--->
 
-		<!-- for local testing only - comment this out before deploying to azure-->
+		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+		<dependency>
+		    <groupId>postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>9.1-901-1.jdbc4</version>
+		</dependency>
+
+		<!-- for local testing only - comment this out before deploying
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
@@ -100,8 +105,7 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.197</version>
 		</dependency>
-
-
+-->
 
 		<dependency>
 			<groupId>javax</groupId>
@@ -115,27 +119,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<version>2.21.0</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina -->
