--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>swd.eht2018</groupId>
+	<groupId>eht2018</groupId>
 	<artifactId>swd</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>swd Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+	<name>Patientendatenbank</name>
+	<url>https://eht18swd.herokuapp.com</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,6 +66,9 @@
 	        <groupId>com.heroku.sdk</groupId>
 	        <artifactId>heroku-maven-plugin</artifactId>
 	        <version>2.0.6</version>
+	        <configuration>
+	        	<appName>eht18swd</appName>
+	        </configuration>
 	      </plugin>
 	
 		</plugins>
